--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ edition = "2018"
 
 [dependencies]
 aes = { version = "0.5.0", optional = true }
-arrayvec = { version = "0.5.1", optional = true }
 # FIXME(#170): flate2 1.0.15 has an MSRV of 1.36.0, breaking ours. We'll update when we know if this will be addressed
 flate2 = { version = ">=1.0.0, <=1.0.14", default-features = false, optional = true }
 time = { version = "0.1", optional = true }
@@ -28,7 +27,7 @@ rand = "0.7"
 walkdir = "2"
 
 [features]
-aes-crypto = ["aes", "arrayvec"]
+aes-crypto = ["aes"]
 deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
