--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,17 @@ Library to support the reading and writing of zip files.
 edition = "2018"
 
 [dependencies]
-aes = { version = "0.5.0", optional = true }
-# FIXME(#170): flate2 1.0.15 has an MSRV of 1.36.0, breaking ours. We'll update when we know if this will be addressed
-flate2 = { version = ">=1.0.0, <=1.0.14", default-features = false, optional = true }
-time = { version = "0.1", optional = true }
+aes = "0.5.0"
 byteorder = "1.3"
 bzip2 = { version = "0.3", optional = true }
 crc32fast = "1.0"
+# FIXME(#170): flate2 1.0.15 has an MSRV of 1.36.0, breaking ours. We'll update when we know if this will be addressed
+flate2 = { version = ">=1.0.0, <=1.0.14", default-features = false, optional = true }
+hmac = "0.9.0"
+pbkdf2 = "0.5.0"
+sha-1 = "0.9.1"
 thiserror = "1.0"
+time = { version = "0.1", optional = true }
 
 [dev-dependencies]
 bencher = "0.1"
@@ -27,7 +30,6 @@ rand = "0.7"
 walkdir = "2"
 
 [features]
-aes-crypto = ["aes"]
 deflate = ["flate2/rust_backend"]
 deflate-miniz = ["flate2/default"]
 deflate-zlib = ["flate2/zlib"]
